--- a/index.css
+++ b/index.css
@@ -15,3 +15,9 @@ h1 {
   ol{
     list-style: georgian;
   }
+  .According{
+    font-family: Times New Roman;
+    color: brown;
+    font-style: italic;
+
+  }
