--- a/index.css
+++ b/index.css
@@ -19,5 +19,10 @@ h1 {
     font-family: Times New Roman;
     color: brown;
     font-style: italic;
-
+  }
+  .Island{
+    color: blueviolet;
+    font-size: 80px;
+    font-style: oblique;
+    text-align: center;
   }
