--- a/index.css
+++ b/index.css
@@ -30,3 +30,7 @@ h1 {
     color: darkgreen;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
+  .Mombasa{
+    font-size: small;
+    color: skyblue;
+  }
