Add styling changes

--- a/index.css
+++ b/index.css
@@ -32,9 +32,9 @@ h1 {
   }
   .Mombasa{
     font-size: small;
-    color: skyblue;
+    color: gray;
   }
   .history{
     font-size: 40px;
-    color: darkgoldenrod;
+    color: black;
   }
